@@ -1,5 +1,5 @@
 /*
- * Copyright 2002-2022 the original author or authors.
+ * Copyright 2002-2021 the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -97,7 +97,7 @@ public abstract class YamlProcessor {
 	 * </pre>
 	 */
 	public void setDocumentMatchers(DocumentMatcher... matchers) {
-		this.documentMatchers = List.of(matchers);
+		this.documentMatchers = Arrays.asList(matchers);
 	}
 
 	/**
@@ -146,7 +146,7 @@ public abstract class YamlProcessor {
 		else {
 			Assert.noNullElements(supportedTypes, "'supportedTypes' must not contain null elements");
 			this.supportedTypes = Arrays.stream(supportedTypes).map(Class::getName)
-					.collect(Collectors.toUnmodifiableSet());
+					.collect(Collectors.collectingAndThen(Collectors.toSet(), Collections::unmodifiableSet));
 		}
 	}
 
