@@ -1,5 +1,5 @@
 /*
- * Copyright 2002-2022 the original author or authors.
+ * Copyright 2002-2021 the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -20,12 +20,12 @@ import java.lang.reflect.Method;
 import java.util.ArrayList;
 import java.util.Collections;
 import java.util.Comparator;
+import java.util.EnumSet;
 import java.util.LinkedHashSet;
 import java.util.List;
 import java.util.Map;
 import java.util.Set;
 import java.util.stream.Collectors;
-import java.util.stream.Stream;
 
 import reactor.core.publisher.Mono;
 
@@ -46,7 +46,6 @@ import org.springframework.web.server.MethodNotAllowedException;
 import org.springframework.web.server.NotAcceptableStatusException;
 import org.springframework.web.server.ServerWebExchange;
 import org.springframework.web.server.ServerWebInputException;
-import org.springframework.web.server.UnsatisfiedRequestParameterException;
 import org.springframework.web.server.UnsupportedMediaTypeStatusException;
 import org.springframework.web.util.pattern.PathPattern;
 
@@ -172,9 +171,9 @@ public abstract class RequestMappingInfoHandlerMapping extends AbstractHandlerMe
 		ServerHttpRequest request = exchange.getRequest();
 
 		if (helper.hasMethodsMismatch()) {
-			HttpMethod httpMethod = request.getMethod();
+			String httpMethod = request.getMethodValue();
 			Set<HttpMethod> methods = helper.getAllowedMethods();
-			if (HttpMethod.OPTIONS.equals(httpMethod)) {
+			if (HttpMethod.OPTIONS.matches(httpMethod)) {
 				Set<MediaType> mediaTypes = helper.getConsumablePatchMediaTypes();
 				HttpOptionsHandler handler = new HttpOptionsHandler(methods, mediaTypes);
 				return new HandlerMethod(handler, HTTP_OPTIONS_HANDLE_METHOD);
@@ -191,8 +190,7 @@ public abstract class RequestMappingInfoHandlerMapping extends AbstractHandlerMe
 			catch (InvalidMediaTypeException ex) {
 				throw new UnsupportedMediaTypeStatusException(ex.getMessage());
 			}
-			throw new UnsupportedMediaTypeStatusException(
-					contentType, new ArrayList<>(mediaTypes), exchange.getRequest().getMethod());
+			throw new UnsupportedMediaTypeStatusException(contentType, new ArrayList<>(mediaTypes), exchange.getRequest().getMethod());
 		}
 
 		if (helper.hasProducesMismatch()) {
@@ -201,9 +199,9 @@ public abstract class RequestMappingInfoHandlerMapping extends AbstractHandlerMe
 		}
 
 		if (helper.hasParamsMismatch()) {
-			throw new UnsatisfiedRequestParameterException(
-					helper.getParamConditions().stream().map(Object::toString).toList(),
-					request.getQueryParams());
+			throw new ServerWebInputException(
+					"Unsatisfied query parameter conditions: " + helper.getParamConditions() +
+							", actual parameters: " + request.getQueryParams());
 		}
 
 		return null;
@@ -219,9 +217,10 @@ public abstract class RequestMappingInfoHandlerMapping extends AbstractHandlerMe
 
 
 		public PartialMatchHelper(Set<RequestMappingInfo> infos, ServerWebExchange exchange) {
-			this.partialMatches.addAll(infos.stream()
-					.filter(info -> info.getPatternsCondition().getMatchingCondition(exchange) != null)
-					.map(info -> new PartialMatch(info, exchange)).toList());
+			this.partialMatches.addAll(infos.stream().
+					filter(info -> info.getPatternsCondition().getMatchingCondition(exchange) != null).
+					map(info -> new PartialMatch(info, exchange)).
+					collect(Collectors.toList()));
 		}
 
 
@@ -236,38 +235,42 @@ public abstract class RequestMappingInfoHandlerMapping extends AbstractHandlerMe
 		 * Any partial matches for "methods"?
 		 */
 		public boolean hasMethodsMismatch() {
-			return this.partialMatches.stream().noneMatch(PartialMatch::hasMethodsMatch);
+			return this.partialMatches.stream().
+					noneMatch(PartialMatch::hasMethodsMatch);
 		}
 
 		/**
 		 * Any partial matches for "methods" and "consumes"?
 		 */
 		public boolean hasConsumesMismatch() {
-			return this.partialMatches.stream().noneMatch(PartialMatch::hasConsumesMatch);
+			return this.partialMatches.stream().
+					noneMatch(PartialMatch::hasConsumesMatch);
 		}
 
 		/**
 		 * Any partial matches for "methods", "consumes", and "produces"?
 		 */
 		public boolean hasProducesMismatch() {
-			return this.partialMatches.stream().noneMatch(PartialMatch::hasProducesMatch);
+			return this.partialMatches.stream().
+					noneMatch(PartialMatch::hasProducesMatch);
 		}
 
 		/**
 		 * Any partial matches for "methods", "consumes", "produces", and "params"?
 		 */
 		public boolean hasParamsMismatch() {
-			return this.partialMatches.stream().noneMatch(PartialMatch::hasParamsMatch);
+			return this.partialMatches.stream().
+					noneMatch(PartialMatch::hasParamsMatch);
 		}
 
 		/**
 		 * Return declared HTTP methods.
 		 */
 		public Set<HttpMethod> getAllowedMethods() {
-			return this.partialMatches.stream()
-					.flatMap(m -> m.getInfo().getMethodsCondition().getMethods().stream())
-					.map(requestMethod -> HttpMethod.valueOf(requestMethod.name()))
-					.collect(Collectors.toSet());
+			return this.partialMatches.stream().
+					flatMap(m -> m.getInfo().getMethodsCondition().getMethods().stream()).
+					map(requestMethod -> HttpMethod.resolve(requestMethod.name())).
+					collect(Collectors.toSet());
 		}
 
 		/**
@@ -275,10 +278,9 @@ public abstract class RequestMappingInfoHandlerMapping extends AbstractHandlerMe
 		 * match the "methods" condition.
 		 */
 		public Set<MediaType> getConsumableMediaTypes() {
-			return this.partialMatches.stream()
-					.filter(PartialMatch::hasMethodsMatch)
-					.flatMap(m -> m.getInfo().getConsumesCondition().getConsumableMediaTypes().stream())
-					.collect(Collectors.toCollection(LinkedHashSet::new));
+			return this.partialMatches.stream().filter(PartialMatch::hasMethodsMatch).
+					flatMap(m -> m.getInfo().getConsumesCondition().getConsumableMediaTypes().stream()).
+					collect(Collectors.toCollection(LinkedHashSet::new));
 		}
 
 		/**
@@ -286,10 +288,9 @@ public abstract class RequestMappingInfoHandlerMapping extends AbstractHandlerMe
 		 * match the "methods" and "consumes" conditions.
 		 */
 		public Set<MediaType> getProducibleMediaTypes() {
-			return this.partialMatches.stream()
-					.filter(PartialMatch::hasConsumesMatch)
-					.flatMap(m -> m.getInfo().getProducesCondition().getProducibleMediaTypes().stream())
-					.collect(Collectors.toCollection(LinkedHashSet::new));
+			return this.partialMatches.stream().filter(PartialMatch::hasConsumesMatch).
+					flatMap(m -> m.getInfo().getProducesCondition().getProducibleMediaTypes().stream()).
+					collect(Collectors.toCollection(LinkedHashSet::new));
 		}
 
 		/**
@@ -297,10 +298,9 @@ public abstract class RequestMappingInfoHandlerMapping extends AbstractHandlerMe
 		 * match the "methods", "consumes", and "params" conditions.
 		 */
 		public List<Set<NameValueExpression<String>>> getParamConditions() {
-			return this.partialMatches.stream()
-					.filter(PartialMatch::hasProducesMatch)
-					.map(match -> match.getInfo().getParamsCondition().getExpressions())
-					.collect(Collectors.toList());
+			return this.partialMatches.stream().filter(PartialMatch::hasProducesMatch).
+					map(match -> match.getInfo().getParamsCondition().getExpressions()).
+					collect(Collectors.toList());
 		}
 
 		/**
@@ -392,8 +392,8 @@ public abstract class RequestMappingInfoHandlerMapping extends AbstractHandlerMe
 
 		private static Set<HttpMethod> initAllowedHttpMethods(Set<HttpMethod> declaredMethods) {
 			if (declaredMethods.isEmpty()) {
-				return Stream.of(HttpMethod.values())
-						.filter(method -> !HttpMethod.TRACE.equals(method))
+				return EnumSet.allOf(HttpMethod.class).stream()
+						.filter(method -> method != HttpMethod.TRACE)
 						.collect(Collectors.toSet());
 			}
 			else {
